--- a/pcsx2/windows/VCprojects/pcsx2.vcxproj.filters
+++ b/pcsx2/windows/VCprojects/pcsx2.vcxproj.filters
@@ -151,7 +151,7 @@
     <Filter Include="System\Ps2\Iop\CDVD\Windows">
       <UniqueIdentifier>{be861049-a142-4650-85a5-a2fdd4eef011}</UniqueIdentifier>
     </Filter>
-    <Filter Include="System\Ps2\Iop\CDVD\Unix">
+    <Filter Include="System\Ps2\Iop\CDVD\Linux">
       <UniqueIdentifier>{a5904fb6-e846-4cbf-940c-ca1c604140a0}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -883,11 +883,11 @@
     <ClCompile Include="..\..\CDVD\Windows\IOCtlSrc.cpp">
       <Filter>System\Ps2\Iop\CDVD\Windows</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\CDVD\Unix\IOCtlSrc.cpp">
-      <Filter>System\Ps2\Iop\CDVD\Unix</Filter>
+    <ClCompile Include="..\..\CDVD\Linux\IOCtlSrc.cpp">
+      <Filter>System\Ps2\Iop\CDVD\Linux</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\CDVD\Unix\DriveUtility.cpp">
-      <Filter>System\Ps2\Iop\CDVD\Unix</Filter>
+    <ClCompile Include="..\..\CDVD\Linux\DriveUtility.cpp">
+      <Filter>System\Ps2\Iop\CDVD\Linux</Filter>
     </ClCompile>
     <ClCompile Include="..\..\gui\DriveList.cpp">
       <Filter>AppHost</Filter>
